# jollybean

./: .MANTRA.txt.un~  .Makefile.un~  .Makefile~.un~  .ctrl.c.un~  .design.txt.swp  .ge.h.un~  .gitignore  .img.py.un~  .init_game_dir.sh.un~  .jb.h.un~  .main.c.un~  .notes.txt.un~  .plan.un~  .scene.c.un~  .t.py.un~  .te.py.swp  .te.py.un~  .testdata.un~  .thoughts.un~  .todo.txt.un~  .todo.un~  .todo2020.un~  Makefile  PLAN  README.md  TODO  TODO_CURRENT  _entityDesign.txt  build  ctrl.c  data.c  deps  design.txt  event.c  ge.h  ideas  image.c  img.py  jb  jb.c  (+13 more)
_utils/: byteIdxLUT.c
archive/: Makefile  bt.c  try  valgrindCmd
archive/X/: Makefile  TODO  xA.c
core/: 2  bt.c  data.c  x.c  xMain.c  xTree.c
core/include/: bt.h  data.h  x.h  xMain.h  xTree.h
engine/: .jb.c.swo  biome.c  bt.c  data.c  ecs.c  jb.c  wild.c  xControl.c  xParent.c  xRender.c  xSystem.c
engine/include/: .data.h.swp  biome.h  bt.h  data.h  ecs.h  errors.h  genome.h  jb.h  jbOld.h  personality.h  seed.h  wild.h  xParent.h
fixLater/: tmpScript  xAnim.c  xCollision.c  xControl.c  xControl.h  xMaster.c  xMotionTrans.c  xMotionTrans.h  xTimer.c
game/biome/: biome1.c
game/include/: .genes.h.swp  .genome.h.swp  .personality.h.swo  .personality.h.swp  genes.h  nectar.h  nectar_image.h  nectar_node.h  nectar_personality.h  nectar_seed.h  personality.h  test.h
games/nectar/: config
genes/: tags
genes/ColorPalette/: biggerCP.c
genes/Image/: biggerImg.c
genes/include/: genes.h
include/: gene.h  jb.h
include/data/: array.h  bt.h  common.h  fray.h  gene.h  inflatable.h  list.h  mail.h  map.h  mem.h  share.h  strip.h
include/interface/: headless_interface.h  interface.h
include/x/: implicitGenes.h  x.h  xAnim.h  (+6 more)
notes/: BOOKMARK  PLAN  TODO  collision_ordering  game-ideas  gene  histo  ideas  kaizen  tilemap
scripts/: cov  game  image  ini  jb  keyring  opt  sys  unit-test
src/: '  .Makefile.swp  .Makefile.un~  .ctrl.c.un~  .data.c.un~  .design.txt.un~  .ecs.c.swp  .ecs.c.un~  .ent.c.un~  .ent.txt.un~  .event.c.un~  .guess.un~  .image.c.un~  .jb.c.swn  .jb.c.swp  .jb.h.un~  .jbAlloc.c.un~  .jbOld.h.un~  .loop.c.un~  .main.c.un~  .make: *** [Makefile.swp  .map.c.un~  .map.c~.un~  .scene.c.un~  .sprite.c.un~  .sys.c.un~  .sys.cpp.un~  .text.c.un~  .xParent.c.swp  Makefile  Makefile~  biome.c  bt.c  compile_commands.json  ctrl.c  data.c  data.c~  design.txt~  ecs.c  ecs.c~  (+43 more)
sys/: xControl.c  xRender.c
templates/: jb.c  main.c  system.c  system.h  test_Makefile
test/: Images.mk  Makefile  a.out  data.s  gmon.out  out  render.c  test.c  test.s
utils/: '  .append_db.py.swn  .append_db.py.swo  .append_db.py.swp  .append_db.py.un~  .bitCountLUT.c.un~  .bitCountLUT.h.un~  .bitCountLUT.py.un~  .bitCountMaskLUT.c.un~  .bitFlagLUT.c.un~  .bitMaskLUT.c.un~  .bitmaskLUT.c.un~  .blah.un~  .bridge.py.un~  .bridge_sprite.py.un~  .byteIdxLUT.c.un~  .db.py.un~  .db.un~  .db_design.txt.un~  .db_img.py.swp  .db_py_reps.py.un~  .enum.py.un~  .gen_jb_objects.py.un~  .gen_pyclasses.py.un~  .img.py.un~  .img_db.py.un~  .ini_game_dir.py.un~  .init_dbs.py.un~  .init_game_dir.sh.un~  .jb_db.py.un~  .jb_enum.py.un~  .jb_media.py.un~  .jb_obj_types.py.un~  .jb_objects.py.un~  .media.py.un~  .naming_the_engine.un~  .notes.txt.un~  .py_defs.py.un~  .te.py.swp  .te.py.un~  (+75 more)
utils/sf3/: CMakeLists.txt  design.h  log  soundfont.h  tags
utils/sf3/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
utils/sf3/example/: BoomwhackerL.h  BoomwhackerL_pcm_inflatable.h  BoomwhackerR.h  BoomwhackerR_pcm_inflatable.h  Makefile  bankSeed_myBank.h  example  log  main.c  presetSeed_Boomwhacker.h  sf.sf3  sf3Out.c  sfBoomwhacker.h  sfBoomwhackerBank0.h  sfBoomwhackerBank0Preset0.h  sftloz.h  soundfontSeed_test.h  tryAgain.c  zippit.c
utils/sf3/example/.cache/clangd/index/: main.c.D93A433221418DED.idx
utils/sf3/example/_sf/: tloz.sf3
utils/sf3/example/sf_/: Boomwhacker.sf3.pcm
utils/sf3/example/src/: \  main.c
utils/sf3/example/src/oldcrap/: bloodAndGore.c
utils/sf3/include/fluidsynth/: sfont.h
utils/sf3/libbotox/: Makefile
utils/sf3/libbotox/.cache/clangd/index/: data.h.22093E0FD407514C.idx  data.h.AE31F23264C8F176.idx
utils/sf3/libbotox/src/: bt.c  data.c  x.c
utils/sf3/libbotox/src/include/: bt.h  data.h  x.h
utils/sf3/src/: fluid_chan.c  fluid_conv.c  fluid_defsfont.c  fluid_defsfont.h  fluid_gen.c  fluid_synth.c  fluid_voice.c
utils/sf3/stb/: stb_vorbis.c
(+698 files in other folders)
